# ms-core

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: fix_project.md
docs/plans/: 2026-03-02-pipeline-orchestrator-design.md
src/ms_core/: __init__.py  dataset.py  pipeline.py
src/ms_core/analysis/: __init__.py  anova.py  clustering.py  correlation.py  oplsda.py  outlier.py  pca.py  plsda.py  random_forest.py  roc.py  univariate.py
src/ms_core/calibration/: __init__.py  batch_effect.py  istd_correction.py  pqn.py  qc_lowess.py
src/ms_core/preprocessing/: __init__.py  base.py  data_organizer.py  duplicate_remover.py  istd_marker.py  ms_quality_filter.py  settings.py
src/ms_core/processing/: __init__.py  feature_filter.py  missing_values.py  normalization.py  scaling.py  transformation.py
src/ms_core/utils/: __init__.py  console.py  constants.py  data_helpers.py  data_validation.py  excel_format.py  file_handler.py  file_io.py  intermediate_store.py  plotting.py  results.py  safe_math.py  sample_classification.py  statistics.py  validators.py
src/ms_core/visualization/: __init__.py  anova_plot.py  boxplot.py  correlation_plot.py  density_plot.py  heatmap.py  norm_preview.py  oplsda_plot.py  outlier_plot.py  pca_3d.py  pca_plot.py  rf_plot.py  roc_plot.py  vip_plot.py  volcano_plot.py
tests/: conftest.py  test_cache_path_policy.py  test_dataset.py  test_intermediate_store.py  test_pipeline.py  test_root_hygiene.py
